fix(#1541): set overflow: auto on block elements

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     line-height: 1.0;
 }
 
+.block-language-dataview {
+    overflow-y: auto;
+}
+
 /*****************/
 /** Table Views **/
 /*****************/
